nivelavelo upload from V1

--- a/api/package.json
+++ b/api/package.json
@@ -41,16 +41,22 @@
     "@feathersjs/socketio-client": "^1.1.5",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "feathers-blob": "^2.0.1",
     "feathers-hooks-common": "^4.19.4",
+    "feathers-mongodb": "^3.3.0",
     "feathers-mongoose": "^6.1.4",
+    "fs-blob-store": "^5.2.1",
     "helmet": "^3.13.0",
+    "mongodb": "^3.1.1",
     "mongodb-core": "^3.1.9",
     "mongoose": "^5.2.7",
+    "multer": "^1.4.1",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.2.0",
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "dotenv": "^6.2.0",
     "eslint": "^5.10.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.7",
