--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.18.0",
     "moment": "^2.23.0",
     "socket.io-client": "^2.2.0",
-    "vue-i18n": "^7.3.3"
+    "vue-i18n": "^7.3.3",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
